RESOLVED FIXED27608
WebCore/page/Chrome.cpp does not conform to style standards
https://bugs.webkit.org/show_bug.cgi?id=27608
Summary WebCore/page/Chrome.cpp does not conform to style standards
Mike Fenton
Reported 2009-07-23 09:42:06 PDT
cpplint reports a number of valid style fixes that should be made to WebCore/page/Chrome.cpp.
Attachments
Style patch for Chrome.cpp (5.96 KB, patch)
2009-07-23 09:44 PDT, Mike Fenton
eric: review+
Mike Fenton
Comment 1 2009-07-23 09:44:49 PDT
Created attachment 33340 [details] Style patch for Chrome.cpp
Eric Seidel (no email)
Comment 2 2009-07-23 23:15:36 PDT
Comment on attachment 33340 [details] Style patch for Chrome.cpp LGTM.
Eric Seidel (no email)
Comment 3 2009-07-23 23:16:19 PDT
I wish we were keeping track of which files passed etc. Instead of fixing all of these manually, it seems it would be more useful to add style checking to something like svn-create-patch or bugzilla-tool post-diff. Then these files would just fix themselves over time. :)
Adam Barth
Comment 4 2009-07-23 23:57:03 PDT
Will land.
Adam Barth
Comment 5 2009-07-24 00:44:19 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/page/Chrome.cpp Committed r46329 M WebCore/ChangeLog M WebCore/page/Chrome.cpp r46329 = 97cc408e67e652b3d485b722dd0bc8c6a4f4a4ea (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46329
Note You need to log in before you can comment on or make changes to this bug.